fix: [CI-9500]: Ensure `Copy` button is alway visible on hover over test/class name (#18323)

--- a/src/modules/70-pipeline/pages/execution/ExecutionTestView/BuildTests.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionTestView/BuildTests.module.scss
@@ -767,3 +767,8 @@
     border-bottom-left-radius: 0 !important;
   }
 }
+
+.copyText {
+  display: flex;
+  align-items: baseline;
+}
